# LEI-MIEI

./: README.md
2nd year/: README.md
2nd year/CP/: README.md
2nd year/LI3/: README.md
2nd year/LI3/LI3 - Fase 1/: CatCli.c  CatCli.h  CatProds.c  CatProds.h  Cliente.c  Faturacao.c  Faturacao.h  Filial.c  Filial.h  Makefile  Navegador.c  Navegador.h  Produto.c  Produto.h  Queries.c  Queries.h  README.md  Venda.c  Venda.h  main.c
2nd year/LI3/LI3 - Fase 2/: CatCli.java  CatProds.java  Cliente.java  Constantes.java  Crono.java  DadosFaturacao.java  DadosFilial.java  DadosMesFaturacao.java  DadosMesFilial.java  Faturacao.java  Filial.java  GereVendasAppMVC.java  GereVendasController.java  GereVendasModel.java  GereVendasView.java  ICatCli.java  ICatProds.java  ICliente.java  IFaturacao.java  IFilial.java  IGereVendasController.java  IGereVendasModel.java  IGereVendasView.java  IProduto.java  IVenda.java  Navegador.java  ParQuerieCinco.java  ParQuerieDez.java  ParQuerieDois.java  ParQuerieOito.java  ParQuerieSete.java  Produto.java  QuerieOitoAux.java  RegistoLeitura.java  TestesPerformance.java  TrioQuerieNove.java  TrioQuerieQuatro.java  TrioQuerieSeis.java  TrioQuerieTres.java  Venda.java  (+2 more)
2nd year/POO/: README.md
2nd year/POO/UmCarroJa/: Aluguer.ctxt  Aluguer.java  App.ctxt  App.java  CarroEletrico.ctxt  CarroEletrico.java  CarroGasolina.ctxt  CarroGasolina.java  CarroHibrido.ctxt  CarroHibrido.java  Cliente.ctxt  Cliente.java  ClienteComparator.ctxt  ClienteComparator.java  Controller.ctxt  Controller.java  DataFormatException.ctxt  DataFormatException.java  NoUserException.ctxt  NoUserException.java  PedidoAluguer.ctxt  PedidoAluguer.java  Pessoa.ctxt  Pessoa.java  Ponto.ctxt  Ponto.java  ProcuraException.ctxt  ProcuraException.java  Proprietario.ctxt  Proprietario.java  Veiculo.ctxt  Veiculo.java  VeiculoComparator.ctxt  (+4 more)
3rd year/: README.md
3rd year/BD/: README.md
3rd year/CG/: README.md
3rd year/CG/Trabalho/p4/src/: CMakeLists.txt  config.xml  demoLights.xml
3rd year/CG/Trabalho/p4/src/engine/: engine.cpp  engine.h
3rd year/CG/Trabalho/p4/src/generator/: generator.cpp  generator.h
3rd year/CG/Trabalho/p4/src/lib/: Color.h  Group.cpp  Group.h  Light.cpp  Light.h  MaterialLight.cpp  MaterialLight.h  Models.cpp  Models.h  Point.cpp  Rotation.cpp  Rotation.h  Scale.cpp  Scale.h  Transformation.cpp  Transformation.h  Translation.cpp  Translation.h
3rd year/CG/Trabalho/p4/src/models/: bezier.3d  box.3d  cone.3d  plane.3d  sphere.3d  torus.3d
3rd year/DSS/: README.md  mediacenter.vpp
3rd year/MDIO/: README.md
3rd year/REDES/: README.md
3rd year/SD/: README.md
(+366 files in other folders)
